// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Menu Attribute should render with attributes correctly 1`] = `
<ul
  className="attribute"
>
  <li
    className="clickable"
    onMouseDown={[Function]}
  >
    <h2>
      &lt; Attributes
    </h2>
  </li>
  <li
    className="separator"
  >
    <b>
      class
    </b>
  </li>
  <li
    className="clickable"
    data-name="class"
    data-value="context-menu-attributes-test"
    onMouseDown={[Function]}
  >
    Contains...
  </li>
  <li
    className="clickable"
    data-name="class"
    data-value="context-menu-attributes-test"
    onMouseDown={[Function]}
  >
    <div
      className="equals"
    >
      Equals 
      <small>
        context-menu-attributes-test
      </small>
    </div>
  </li>
  <li
    className="clickable"
    data-name="class"
    data-value="context-menu-attributes-test"
    onMouseDown={[Function]}
  >
    Exists
  </li>
</ul>
`;

exports[`Context Menu Attribute should render without attributes correctly 1`] = `
<ul
  className="attribute"
>
  <li
    className="clickable"
    onMouseDown={[Function]}
  >
    <h2>
      &lt; No attributes found
    </h2>
  </li>
</ul>
`;
